Fixed layout issue

--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,7 +1,8 @@
 li.search-result-item {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: auto auto;
+  grid-template-rows: repeat(3, auto);
+  gap: 0 1rem;
 
   padding: 1rem;
 
@@ -31,6 +32,10 @@ a.search-result-link-title {
 
 .search-result-date {
   grid-column: span 2;
+}
+
+p.search-result-desc {
+  width: 100%;
 }
 
 a.search-result-link {
